Course home alignment fix

--- a/template/default/SASS/inventory.scss
+++ b/template/default/SASS/inventory.scss
@@ -1018,7 +1018,7 @@ ul.tablelist
     width: 100%;
     position: relative;    
     display: inline-block;
-    padding-left: 1em;
+    //padding-left: 1em;
     @include box-sizing(border-box);
   }
 
